[package]
name = "s-stacking"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "s_stacking"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = { features = ["init-if-needed"], version = "0.26.0" }
anchor-spl = "0.26.0"
spl-token = "3.3.0"
solana-program = "1.9.13"
mpl-token-metadata = { features = ["no-entrypoint"], version = "1.2.5" }